--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="post">
   <p><a href="{{site.url}}">Главная</a> » {{ page.title }}</p>
-  <h1>{{ page.title }}</h1>
+  <h1>{{ page.heading }}</h1>
 
   <div class="entry">
     {{ content }}
