--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article class="post">
-  <p><a href="{{site.url}}">Главная</a> » {{ page.title }}</p>
+  <p><a href="{{site.url}}">Главная</a> » {{ page.breadtitle }}</p>
   <h1>{{ page.heading }}</h1>
 
   <div class="entry">
